make stack barchart

--- a/style.css
+++ b/style.css
@@ -17,3 +17,13 @@ div.tooltip {
   border-radius: 2px;
   pointer-events: none;
 }
+
+.axis path, .axis line {
+  fill: none;
+  stroke: black;
+  shape-rendering: crispEdges;
+}
+.axis text {
+  font-family: sans-serif;
+  font-size: 11px;
+}
